--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:update": "jest -u",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "start": "NODE_ENV=dev node ./server.hot.reload.js",
+    "start": "NODE_ENV=prod node ./server.hot.reload.js",
     "dev": "rimraf docs/public/assets && cross-env NODE_ENV=dev webpack --display-entrypoints --config webpack.dev.config.js",
     "prod": "rimraf docs/public/assets && cross-env NODE_ENV=production webpack -p --config webpack.production.config.js ",
     "dev-server": "npm run dev && node src/server",
