--- a/package.json
+++ b/package.json
@@ -38,67 +38,7 @@
   "author": "Erwan DATIN (MacKentoch)",
   "license": "MIT",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/bluebird": "^3.5.18",
-    "@types/chart.js": "^2.7.1",
-    "@types/classnames": "^2.2.3",
-    "@types/express": "^4.0.39",
-    "@types/helmet": "^0.0.36",
-    "@types/history": "^4.6.2",
-    "@types/jquery": "^3.2.12",
-    "@types/lodash": "^4.14.87",
-    "@types/moment": "^2.13.0",
-    "@types/react": "^16.0.26",
-    "@types/react-bootstrap": "^0.31.8",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-motion": "^0.0.23",
-    "@types/react-router": "^4.0.15",
-    "@types/react-router-redux": "^5.0.10",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@types/serialize-javascript": "^1.3.2",
-    "caniuse-lite": "^1.0.30000777",
-    "chalk": "^2.0.1",
-    "codecov": "^2.3.0",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "css-module-flow": "^1.0.0",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "enzyme-to-json": "^3.2.2",
-    "eslint": "^4.7.2",
-    "eslint-plugin-flowtype": "^2.35.1",
-    "eslint-plugin-react": "^7.3.0",
-    "expose-loader": "^0.7.3",
-    "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "flow-bin": "^0.61.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.2.1",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.12.1",
-    "postcss": "^6.0.14",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-focus": "^3.0.0",
-    "postcss-import": "^11.0.0",
-    "postcss-load-config": "^1.2.0",
-    "postcss-loader": "^2.0.9",
-    "postcss-reporter": "^5.0.0",
-    "precss": "^1.4.0",
-    "react-hot-loader": "^3.1.3",
-    "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.2.3",
-    "regenerator-runtime": "^0.11.0",
-    "remove-flow-types-loader": "^1.0.0",
-    "resolve-url-loader": "^2.1.0",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^2.11.3"
+    
   },
   "dependencies": {
     "animate.css": "^3.5.2",
@@ -164,7 +104,68 @@
     "webpack": "^3.9.1",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "@types/axios": "^0.14.0",
+    "@types/bluebird": "^3.5.18",
+    "@types/chart.js": "^2.7.1",
+    "@types/classnames": "^2.2.3",
+    "@types/express": "^4.0.39",
+    "@types/helmet": "^0.0.36",
+    "@types/history": "^4.6.2",
+    "@types/jquery": "^3.2.12",
+    "@types/lodash": "^4.14.87",
+    "@types/moment": "^2.13.0",
+    "@types/react": "^16.0.26",
+    "@types/react-bootstrap": "^0.31.8",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-motion": "^0.0.23",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-redux": "^5.0.10",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/serialize-javascript": "^1.3.2",
+    "caniuse-lite": "^1.0.30000777",
+    "chalk": "^2.0.1",
+    "codecov": "^2.3.0",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
+    "css-module-flow": "^1.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
+    "eslint": "^4.7.2",
+    "eslint-plugin-flowtype": "^2.35.1",
+    "eslint-plugin-react": "^7.3.0",
+    "expose-loader": "^0.7.3",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "flow-bin": "^0.61.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^21.2.1",
+    "json-loader": "^0.5.4",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.12.1",
+    "postcss": "^6.0.14",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-focus": "^3.0.0",
+    "postcss-import": "^11.0.0",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^2.0.9",
+    "postcss-reporter": "^5.0.0",
+    "precss": "^1.4.0",
+    "react-hot-loader": "^3.1.3",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.2.3",
+    "regenerator-runtime": "^0.11.0",
+    "remove-flow-types-loader": "^1.0.0",
+    "resolve-url-loader": "^2.1.0",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^2.11.3"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.js",
